--- a/llopez_week3/templates/index.html
+++ b/llopez_week3/templates/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weatherly</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
 </head>
 <body>
     <header>
-        <h1>Weatherly Forecast App</h1>
+        <h1>Weather Forecast</h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <p>{{ message }}<p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     </header>
     <nav>
     </nav>
     <main>
-        <form>
+        <p>Try to enter coordinates, like 42, -72</p>
+        <form method="POST">
             <label for="lat">Latitude:</label><br>
             <input type="text" id="lat" name="lat"><br>
             <label for="long">Longitude:</label><br>
@@ -22,6 +29,7 @@
         </form>
     </main>
     <footer>
+        <br>
         <p>Leandro Lopez</p>
         <p>Merrimack College</p>
         <p>Advanced Concepts</p>
